--- a/src/pages/glossary/index.astro
+++ b/src/pages/glossary/index.astro
@@ -88,7 +88,7 @@ const pageDescription = `Explore our comprehensive SEO glossary with ${glossaryD
         variant="displaySM"
         class="text-base-900 font-medium 2xl:text-5xl tracking-tight"
       >
-        yxr.io SEO Glossary
+        SEO Glossary of Trending Terms
       </Text>
       <Text
         tag="p"
