--- a/src/pages/glossary/[slug].astro
+++ b/src/pages/glossary/[slug].astro
@@ -127,7 +127,7 @@ const faqStructuredData = {
   }
 };
 
-const pageTitle = `${term.question} - SEO Glossary`;
+const pageTitle = `${term.question} - SEO Glossary | yxr.io`;
 const pageDescription = term.answer;
 ---
 
