--- a/src/pages/blog/posts/[...slug].astro
+++ b/src/pages/blog/posts/[...slug].astro
@@ -3,6 +3,7 @@
 import BlogLayout from "@/layouts/BlogLayout.astro";
 // Get all posts from the "posts" collection
 import { getCollection } from "astro:content";
+
 export async function getStaticPaths() {
   const blogEntries = await getCollection("posts");
   return blogEntries.map((entry) => ({
@@ -10,10 +11,54 @@ export async function getStaticPaths() {
     props: { entry },
   }));
 }
+
 const { entry } = Astro.props;
 const { Content, headings } = await entry.render();
+
+const { title, description, pubDate, author, image } = entry.data;
+const structuredData = {
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": `https://yxr.io/blog/${entry.slug}`
+  },
+  "headline": title,
+  "description": description,
+  "image": {
+    "@type": "ImageObject",
+    "url": `https://yxr.io${image.url}`,
+    "height": 800,
+    "width": 1200
+  },
+  "author": {
+    "@type": "Person",
+    "name": author
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "YXR",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://yxr.io/logo.png",
+      "width": 600,
+      "height": 60
+    }
+  },
+  "datePublished": pubDate,
+  "dateModified": pubDate
+};
 ---
 
-<BlogLayout frontmatter={entry.data} headings={headings}>
-  <Content />
-</BlogLayout>
+<html lang="en">
+  <head>
+    <title>{title}</title>
+    <meta name="description" content={description} />
+    <script type="application/ld+json" set:html={JSON.stringify(structuredData)} />
+  </head>
+  <body>
+    <BlogLayout frontmatter={entry.data} headings={headings}>
+      <Content />
+    </BlogLayout>
+  </body>
+</html>
