--- a/src/pages/blog/posts/[...slug].astro
+++ b/src/pages/blog/posts/[...slug].astro
@@ -23,6 +23,7 @@ const structuredData = {
     "@type": "WebPage",
     "@id": `https://yxr.io/blog/${entry.slug}`
   },
+  "url": `https://yxr.io/blog/${entry.slug}`,
   "headline": title,
   "description": description,
   "image": {
