--- a/src/pages/blog/posts/[...slug].astro
+++ b/src/pages/blog/posts/[...slug].astro
@@ -34,7 +34,8 @@ const structuredData = {
   },
   "author": {
     "@type": "Person",
-    "name": author
+    "name": author,
+    "url": "https://www.linkedin.com/company/yxr/"
   },
   "publisher": {
     "@type": "Organization",
